chore(template): change links

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -258,9 +258,9 @@
       <span class="arrow">›</span>
     </div>
     <div id="member-submenu" class="submenu">
-      <a href="/members/add" class="submenu-item">회원 추가</a>
-      <a href="/members/manage" class="submenu-item">회원 관리</a>
-      <a href="/members/activated" class="submenu-item">회원 활성화</a>
+      <a href="/view/users/add" class="submenu-item">회원 추가</a>
+      <a href="/view/users/list" class="submenu-item">회원 관리</a>
+      <a href="/view/users/activate" class="submenu-item">회원 활성화</a>
     </div>
 
     <!-- 포인트 관리 메뉴 -->
@@ -279,9 +279,9 @@
       <span class="arrow">›</span>
     </div>
     <div id="party-submenu" class="submenu">
-      <a href="/party/add" class="submenu-item">그룹 생성</a>
-      <a href="/party/manage" class="submenu-item">그룹 관리</a>
-      <a href="/party/members" class="submenu-item">그룹 회원 관리</a>
+      <a href="/view/parties/add" class="submenu-item">그룹 생성</a>
+      <a href="/view/parties/list" class="submenu-item">그룹 관리</a>
+      <a href="/view/parties/members" class="submenu-item">그룹 회원 관리</a>
     </div>
 
     <!-- 가맹점 관리 메뉴 -->
@@ -290,9 +290,9 @@
       <span class="arrow">›</span>
     </div>
     <div id="franchise-submenu" class="submenu">
-      <a href="/franchise/add" class="submenu-item">가맹점 추가</a>
-      <a href="/franchise/manage" class="submenu-item">가맹점 관리</a>
-      <a href="/franchise/activated" class="submenu-item">가맹점 활성화</a>
+      <a href="/view/franchises/add" class="submenu-item">가맹점 추가</a>
+      <a href="/view/franchises/list" class="submenu-item">가맹점 관리</a>
+      <a href="/view/franchises/activate" class="submenu-item">가맹점 활성화</a>
     </div>
 
     <!-- 거래 관리 메뉴 -->
@@ -312,8 +312,8 @@
       <span class="arrow">›</span>
     </div>
     <div id="settlement-submenu" class="submenu">
-      <a href="/settlement/registration" class="submenu-item">정산</a>
-      <a href="/settlement/history" class="submenu-item">정산 관리</a>
+      <a href="/view/transactions/close" class="submenu-item">정산</a>
+      <a href="/view/transactions/list" class="submenu-item">정산 관리</a>
     </div>
   </div>
 
