--- a/src/main/resources/templates/franchises/list.html
+++ b/src/main/resources/templates/franchises/list.html
@@ -81,7 +81,7 @@
     </div>
 
     <!-- 페이지네이션 -->
-    <div style="margin-top: 30px; text-align: center;">
+    <div style="margin-top: 30px; text-align: center;" th:if="${totalPages > 1}">
         <div style="display: inline-block;">
             <a style="display: inline-block; padding: 5px 10px; margin: 0 5px; border: 1px solid #ddd; text-decoration: none; color: #333;"
                th:if="${currentPage > 1}" th:href="@{list(page=${currentPage - 1}, size=${size})}">&lt;</a>
