fix(template): change the value to corresponding controller parameters

--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -18,8 +18,8 @@
             <select name="searchType"
                     style="width: 150px; padding: 8px; border: 1px solid #ddd; border-radius: 4px 0 0 4px; border-right: none;">
                 <option value="name">이름</option>
-                <option value="id">아이디</option>
-                <option value="party">그룹</option>
+                <option value="phone">아이디</option>
+                <option value="partyName">그룹</option>
 
             </select>
             <input type="text" name="keyword" placeholder="검색어를 입력하세요"
