--- a/src/main/resources/templates/transactions/list.html
+++ b/src/main/resources/templates/transactions/list.html
@@ -28,13 +28,13 @@
             </tr>
             </thead>
             <tbody>
-            <tr style="height: 50px; border-bottom: 1px solid #e0e0e0;" th:each="transaction : ${transactions}"
-                th:id="${transaction.franchiseDto.id}" th:object="${transaction}">
+            <tr style="height: 50px; border-bottom: 1px solid #e0e0e0;" th:each="transactionArchive : ${transactionArchives}"
+                th:id="${transactionArchive.franchiseDto.id}" th:object="${transactionArchive}">
                 <td th:text="*{franchiseDto.id}"></td>
                 <td th:text="*{franchiseDto.name}"></td>
-                <td>Where to get it?</td>
-                <td th:text="*{amount}"></td>
-                <td th:text="*{transactionTime}"></td>
+                <td th:text="*{transactionCount}"></td>
+                <td th:text="*{amountSum}"></td>
+                <td th:text="*{duration}"></td>
             </tr>
             </tbody>
         </table>
