--- a/src/main/resources/templates/parties/users.html
+++ b/src/main/resources/templates/parties/users.html
@@ -41,31 +41,11 @@
             </tr>
             </thead>
             <tbody>
-            <tr style="height: 50px; border-bottom: 1px solid #e0e0e0;">
-                <td>1</td>
-                <td>신입 개발자를 위한 자바 백엔드 심화 과정</td>
-                <td>김자바, 이분석, 최사용, 김조회, 박효창</td>
-                <td>
-                    <button style="background-color: #4CAF50; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;">
-                        수정
-                    </button>
-                </td>
-
-            </tr>
-            <tr style="height: 50px; border-bottom: 1px solid #e0e0e0;">
-                <td>2</td>
-                <td>러닝메이트-온봄</td>
-                <td>김자바, 이분석</td>
-                <td>
-                    <button style="background-color: #4CAF50; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;">
-                        수정
-                    </button>
-                </td>
-            </tr>
-            <tr style="height: 50px; border-bottom: 1px solid #e0e0e0;">
-                <td>3</td>
-                <td>러닝메이트-러닝</td>
-                <td></td>
+            <tr style="height: 50px; border-bottom: 1px solid #e0e0e0;" th:each="model : ${models}"
+                th:id="${model.partyId}" th:object="${model}">
+                <td th:text="*{partyId}"></td>
+                <td th:text="*{partyName}"></td>
+                <td th:text="${#strings.listJoin(model.endUserList.![name], ', ')}"></td>
                 <td>
                     <button style="background-color: #4CAF50; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;">
                         수정
