--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -282,8 +282,8 @@
       <span class="arrow">›</span>
     </div>
     <div id="point-submenu" class="submenu">
-      <a href="/points/issue" class="submenu-item">포인트 지급</a>
-      <a href="/points/modify" class="submenu-item">포인트 수정</a>
+      <a href="/view/points/issue" class="submenu-item">포인트 지급</a>
+      <a href="/view/points/modify" class="submenu-item">포인트 수정</a>
     </div>
 
     <!-- 그룹 관리 메뉴 -->
@@ -294,7 +294,7 @@
     <div id="party-submenu" class="submenu">
       <a href="/view/parties/add" class="submenu-item">그룹 생성</a>
       <a href="/view/parties/list" class="submenu-item">그룹 관리</a>
-      <a href="/view/parties/members" class="submenu-item">그룹 회원 관리</a>
+      <a href="/view/parties/users" class="submenu-item">그룹 회원 관리</a>
     </div>
 
     <!-- 가맹점 관리 메뉴 -->
