--- a/src/main/resources/templates/parties/users.html
+++ b/src/main/resources/templates/parties/users.html
@@ -42,10 +42,10 @@
             </thead>
             <tbody>
             <tr style="height: 50px; border-bottom: 1px solid #e0e0e0;" th:each="model : ${models}"
-                th:id="${model.partyId}" th:object="${model}">
-                <td th:text="*{partyId}"></td>
-                <td th:text="*{partyName}"></td>
-                <td th:text="${#strings.listJoin(model.endUserList.![name], ', ')}"></td>
+                th:id="${model.partyDto.id}" th:object="${model}">
+                <td th:text="*{partyDto.id}"></td>
+                <td th:text="*{partyDto.name}"></td>
+                <td th:text="${#strings.listJoin(model.endUserDtoList.![name], ', ')}"></td>
                 <td>
                     <button style="background-color: #4CAF50; color: white; border: none; border-radius: 4px; padding: 5px 10px; cursor: pointer;">
                         수정
