--- a/src/main/resources/templates/transactions/close.html
+++ b/src/main/resources/templates/transactions/close.html
@@ -121,31 +121,16 @@
 
         // 정산 버튼
         function deactivateMembers() {
-            const selectedMembers = [
-                ...document.querySelectorAll("tr[id]:has(input:checked)"),
-            ].map((x) => x.id);
+          const selectedMembers = document.querySelectorAll('input[name="selectedMember"]:checked');
 
-            if (selectedMembers.length === 0) {
-                alert('정산할 내역을 선택해주세요.');
-                return;
-            }
+          if (selectedMembers.length === 0) {
+            alert('정산할 내역을 선택해주세요.');
+            return;
+          }
 
-            if (confirm(selectedMembers.length + '개의 내역을 정산하시겠습니까?')) {
-                const formData = new FormData();
-                formData.append("ids", selectedMembers);
-
-                fetch("activate", {
-                    method: "PATCH",
-                    body: formData,
-                })
-                .then(response => {
-                    if (response.ok) {
-                        alert('선택한 내역이 정산되었습니다.');
-
-                        location.reload();
-                    }
-                });
-            }
+          if (confirm(selectedMembers.length + '개의 내역을 정산하시겠습니까?')) {
+            alert('선택한 내역이 정산되었습니다.');
+          }
         }
 
 
