fix(template): add validThru input

--- a/src/main/resources/templates/points/point_add_member2.html
+++ b/src/main/resources/templates/points/point_add_member2.html
@@ -36,6 +36,12 @@
                                placeholder="20000" required/>
                     </td>
                 </tr>
+                <tr>
+                    <th>유효 기간</th>
+                    <td>
+                        <input type="datetime-local" name="validThru" id="validThru" required/>
+                    </td>
+                </tr>
 
             </table>
         </div>
