--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -294,7 +294,7 @@
     <div id="party-submenu" class="submenu">
       <a href="/view/parties/add" class="submenu-item">그룹 생성</a>
       <a href="/view/parties/list" class="submenu-item">그룹 관리</a>
-      <a href="/view/parties/members" class="submenu-item">그룹 회원 관리</a>
+      <a href="/view/parties/users" class="submenu-item">그룹 회원 관리</a>
     </div>
 
     <!-- 가맹점 관리 메뉴 -->
