fix(template): correct the request URL

--- a/src/main/resources/templates/transactions/close.html
+++ b/src/main/resources/templates/transactions/close.html
@@ -134,7 +134,7 @@
                 const formData = new FormData();
                 formData.append("ids", selectedMembers);
 
-                fetch("activate", {
+                fetch("close", {
                     method: "PATCH",
                     body: formData,
                 })
