fix(template): correct the ID for each records

--- a/src/main/resources/templates/transactions/list.html
+++ b/src/main/resources/templates/transactions/list.html
@@ -29,7 +29,7 @@
             </thead>
             <tbody>
             <tr style="height: 50px; border-bottom: 1px solid #e0e0e0;" th:each="transactionArchive : ${transactionArchives}"
-                th:id="${transactionArchive.franchiseDto.id}" th:object="${transactionArchive}">
+                th:id="${transactionArchive.id}" th:object="${transactionArchive}">
                 <td th:text="*{franchiseDto.id}"></td>
                 <td th:text="*{franchiseDto.name}"></td>
                 <td th:text="*{transactionCount}"></td>
