fix(template): change links to transaction views

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -314,9 +314,9 @@
       <span class="arrow">›</span>
     </div>
     <div id="transaction-submenu" class="submenu">
-      <a href="/transaction/franchise" class="submenu-item">가맹점 조회</a>
-      <a href="/transaction/party" class="submenu-item">그룹 조회</a>
-      <a href="/transaction/members" class="submenu-item">회원 조회</a>
+      <a href="/view/transactions/by-franchise" class="submenu-item">가맹점 조회</a>
+      <a href="/view/transactions/by-group" class="submenu-item">그룹 조회</a>
+      <a href="/view/transactions/by-user" class="submenu-item">회원 조회</a>
     </div>
 
     <!-- 정산 관리 메뉴 -->
