--- a/src/main/resources/templates/transactions/by-user.html
+++ b/src/main/resources/templates/transactions/by-user.html
@@ -80,7 +80,7 @@
                 <td th:text="*{franchiseDto.name}"></td>
                 <td th:text="*{franchiseDto.address}"></td>
                 <td th:text="*{amount}"></td>
-                <td th:text="*{isAccepted ? '결제완료' : '결제취소'"></td>
+                <td th:text="*{isAccepted ? '결제완료' : '결제취소'}"></td>
             </tr>
             </tbody>
         </table>
